css/main.css
/*©agpl*************************************************************************
*                                                                              *
* Napkin Maps – User-friendly map solution for the Napkin platform             *
* Copyright (C) 2020  Napkin AS                                                *
*                                                                              *
* This program is free software: you can redistribute it and/or modify         *
* it under the terms of the GNU Affero General Public License as published by  *
* the Free Software Foundation, either version 3 of the License, or            *
* (at your option) any later version.                                          *
*                                                                              *
* This program is distributed in the hope that it will be useful,              *
* but WITHOUT ANY WARRANTY; without even the implied warranty of               *
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the                 *
* GNU Affero General Public License for more details.                          *
*                                                                              *
* You should have received a copy of the GNU Affero General Public License     *
* along with this program.  If not, see <http://www.gnu.org/licenses/>.        *
*                                                                              *
*****************************************************************************©*/

@charset "UTF-8";


html {
  height: -webkit-fill-available;
}

body {
  min-height: 100vh;
  min-height: -webkit-fill-available;

  margin: 0;
  padding: 0;
}


#map {
  width: 100vw;
  min-height: 100vh;
  min-height: -webkit-fill-available;
}


#streetviewContainer {
  z-index: 1000;

  position: absolute;
  top: 0;
  left: 0;

  width: 100vw;
  min-height: 100vh;
  min-height: -webkit-fill-available;

  visibility: hidden;
}

#streetviewContainer #back {
  z-index: 3;

  position: absolute;
  top: 10px;
  left: 10px;

  font-size: 45px;
  color: lightgrey;
  background-color: rgba(0, 0, 0, 0.5);

  padding: 5px 10px;
  border-radius: 1px;
}
#streetviewContainer #back:hover,
#streetviewContainer #back:focus {
  cursor: pointer;
}

#streetviewContainer #streetview {
  z-index: 1;

  position: absolute;
  top: 0;
  left: 0;

  width: 100vw;
  min-height: 100vh;
  min-height: -webkit-fill-available;
}

#streetviewContainer #not_found {
  z-index: 2;

  position: absolute;
  top: 0;
  left: 0;

  width: 100vw;
  min-height: 100vh;
  min-height: -webkit-fill-available;

  background-color: rgba(0, 0, 0, 0.8);
  text-align: center;

  visibility: hidden;
}
#streetviewContainer #not_found>p {
  margin-top: 150px;

  color: white;
  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
  font-size: 20px;
}

